@@ -1,6 +1,6 @@
 PREFIX=$(HOME)/usr
 PROJNAME=zeo
-VERSION=1.10.5
+VERSION=1.10.6
 
 DEPENDENCY="zeda=1.6.29;zm=1.4.10"
 
